--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -11,7 +11,7 @@
         <f:FlexibleColumnLayout
             id="layout"
             layout="{appView>/layout}"
-            backgroundDesign="solid"
+            backgroundDesign="Solid"
         />
        
     </App>
