--- a/webapp/view/List.view.xml
+++ b/webapp/view/List.view.xml
@@ -39,6 +39,7 @@
                         search="filterTable"
                         filterChange="onFilterBarSearch"
                         showGoOnFB="true"
+                        reset="onFilterBarReset"
                     >
                         <custom:filterGroupItems>
                             <fb:FilterGroupItem
@@ -166,11 +167,18 @@
                             <Table
                                 id="shippingsTable"
                                 noDataText="{i18n>noDataText}"
-                                items="{/ZRFSFBPCDS0001}"
+                                items="{
+                                path: '/ZRFSFBPCDS0001',
+                                sorter: {
+                                path: 'Status',
+                                descending: false
+                                    }
+                                }"
                                 showOverlay="false"
                                 mode="SingleSelectMaster"
                                 selectionChange="onSelectedItem"
                                 alternateRowColors="true"
+                                
                             >
                                 <items>
                                     <ColumnListItem
@@ -334,28 +342,8 @@
                         ariaHasPopup="Dialog"
                         class="messageButton"
                     />
-                    <!-- <Button
-                        id="_IDGenButton3"
-                        type="Transparent"
-                        icon="sap-icon://print"
-                        text="{i18n>btnPrint}"
-                        press="onPrintForms"
-                    /> -->
+
                 </semantic:footerCustomActions>
-                <semantic:positiveAction>
-                    <!-- <semantic:PositiveAction
-                        id="PositiveAction"
-                        text="{i18n>btnChangeStatus}"
-                        press="onChangeStatus"
-                    /> -->
-                </semantic:positiveAction>
-                <semantic:negativeAction>
-                    <!-- <semantic:NegativeAction
-                        id="idNegativeAction"
-                        text="{i18n>btnCancelShipRequest}"
-                        press="onDeleteShippingRequest"
-                    /> -->
-                </semantic:negativeAction>
             </semantic:SemanticPage>
         </content>
     </Page>
